--- a/GoogleAuthApp/Views/Profile/ShowProfile.cshtml
+++ b/GoogleAuthApp/Views/Profile/ShowProfile.cshtml
@@ -1,139 +1,133 @@
 ﻿@model GoogleAuthApp.Models.ShowPostsModel
 
-@{
-    ViewBag.Title = "ShowProfile";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewBag.Title = "ShowProfile";
+    Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <head>
     <link href="@Url.Content("~/Styles/Profile.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Styles/OwnProfile.css")" rel="stylesheet" type="text/css" />
+    <link type="text/css" rel="stylesheet" href="~/Styles/sliderStyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 
-<h2>My Profile</h2>
+@section scripts {
+    @*add slider Slick*@
+    <script src="~/Scripts/slick.min.js"></script>
+    @*settings for slider*@
+    <script src="~/Scripts/sliderSettings.js"></script>
+}
 
-<div>
-    <div class="top-container">
-        <div class="profile-photo-container">
-            @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                  + Convert.ToBase64String(ViewBag.Photo) + "\" />")
-            @*<p> @Html.ActionLink("Add a photo", "Create")</p>*@
+<h2>Profile</h2>
+
+<div class="main-container">
+    <div class="profile-container">
+        <div class="left-sub-container">
+            <div class="profile-photo-container">
+                @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                                 + Convert.ToBase64String(ViewBag.Photo) + "\" />")
+            </div>
+            <div class="profile-info-container">
+                <p class="birthday">@ViewBag.BirthDay</p>
+            </div>
         </div>
-        <div class="profile-info-container">
+        <div class="right-sub-container">
             <div class="name">
                 <p>@ViewBag.FirstName @ViewBag.SecondName</p>
             </div>
             <p class="username">@ViewBag.UserName</p>
-            <p class="birthday">@ViewBag.BirthDay</p>
         </div>
-        <div class="profile-buttons" style="display:flex;flex-direction:row;">
-
-            <a href="@Url.Action("CheckChatGroupAndOpenChatWith", "Chat", new { userId = @ViewBag.UserId} )" style="font-size:15px;margin:5px; flex:0 0 auto; padding:5px;">
-                <div style="height: 30px; width: 130px; background-color:ghostwhite; border:1px solid pink;">
+        <div class="categories-container">
+            <p class="name">Categories</p>
+            <p>Category1</p>
+            <p>Category2</p>
+            <p>Category3</p>
+            <p>Category4</p>
+        </div>
+        <div class="profile-buttons">
+            <div>
+                <a class="button" href="@Url.Action("CheckChatGroupAndOpenChatWith", "Chat", new { userId = @ViewBag.UserId} )">
                     Send Message
-                </div>
-            </a>
+                </a>
+            </div>
             @if (Model.Follow)
             {
-                <a href="@Url.Action("StopFollow", "Profile", new { followId = @ViewBag.UserId} )" style="font-size:15px; margin:5px; padding:5px;">
-                    <div style="height: 30px; width: 130px; background-color:#7fff00; border:1px solid pink;">
-                        Follows
-                    </div>
-                </a>
-            }
+<div>
+    <a class="button follow-clicked" href="@Url.Action("StopFollow", "Profile", new { followId = @ViewBag.UserId} )">
+        Following
+    </a>
+</div> }
             else
             {
-                <a href="@Url.Action("StartFollow", "Profile", new { followId = @ViewBag.UserId} )" style="font-size:15px; margin:5px; padding:5px;">
-                <div style="height: 30px; width: 130px; background-color:ghostwhite; border:1px solid pink;">
-                        Follow
-                </div>
-            </a>
-            }
-
+<div>
+    <a class="button" href="@Url.Action("StartFollow", "Profile", new { followId = @ViewBag.UserId} )">
+        Follow
+    </a>
+</div>            }
         </div>
-
     </div>
-    @foreach (var postORoffer in Model.PostsAndOffers.OrderByDescending(p => p.Date))
-    {
-        <hr>
-        <div>
-            <span>@postORoffer.PostOrOffer</span>
-        </div>
-        <div style="position:relative;" class="searchedItem, top-container">
 
-            <div style="display:flex;flex-direction:row;">
-                <div>
-                    <span>Details  </span>
-                    <br />
-                    <textarea readonly style="overflow:auto;resize:none">@postORoffer.Text</textarea>
+    <div>
+        @foreach (var postORoffer in Model.PostsAndOffers.OrderByDescending(p => p.Date))
+        {
+<hr>
+                <div class="postoffername">
+                    <p>@postORoffer.PostOrOffer</p>
                 </div>
-                <br />
-                <br />
-                <div>
-                    <span>Date  </span>
-                    <br />
-                    @postORoffer.Date
-                </div>
-                <br />
-                <br />
-                <div>
-                    <span>Categories:  </span>
-                    <br />
-                    <br />
-                    @foreach (var category in postORoffer.Categories)
-                    {
-                        <p>
-                            @category.Group
-                        </p>
-                    }
-                </div>
-            </div>
-        </div>
-            if (@postORoffer.PostOrOffer.Equals("Post"))
-            {
-                <div class="searchedItem, top-container">
-                    <div class="slider">
-                        @foreach (var picture in postORoffer.PostPictures)
-                        {
-                            <div class="slider__item">
-                                @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                                       + Convert.ToBase64String(picture.Picture) + "\" />")
-                            </div>
-                        }
-                    </div>
-                </div>
-                <div class="searchedItem, top-container">
-                    <div>
-                        <a href="@Url.Action("AddLikeToPost", "Profile", new { postId =postORoffer.Id, backTo = "ShowProfile", profileUserId = @ViewBag.UserId } )" style="height: 50px; width: 50px;position:relative;">
-                            <span>Like:</span>
-                        </a>
-                        @postORoffer.Likes
-                    </div>
-                </div>
-            }
-            else
-            { @*Offer*@
-                <div class="searchedItem, top-container">
-                    <div class="slider">
-                        @foreach (var picture in postORoffer.OfferPictures)
-                        {
-                            <div class="slider__item">
-                                @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                                       + Convert.ToBase64String(picture.Picture) + "\" />")
-                            </div>
-                        }
-                    </div>
-                </div>
-                <div class="searchedItem, top-container">
-                    <div>
-                        <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =postORoffer.Id, backTo = "ShowProfile", profileUserId = @ViewBag.UserId} )" style="height: 50px; width: 50px;position:relative;">
-                            <span>Like:</span>
-                        </a>
-                        @postORoffer.Likes
-                    </div>
-                </div>
-             }
+                                <div class="middle-sub-container">
+                                    <div class="postoffer-top-container">
+                                        <div class="details-container">
+                                            <p>Details:</p>
+                                            <textarea readonly>@postORoffer.Text</textarea>
+                                        </div>
+                                        <div class="date-container">
+                                            <p>Date:</p>
+                                            @postORoffer.Date
+                                        </div>
+                                        <div class="postoffer-categories-container">
+                                            <p>Categories:</p>
+                                            @foreach (var category in postORoffer.Categories)
+                                            {
+                            <p>@category.Group</p>}
+                                        </div>
+                                    </div>
+                                    @if (@postORoffer.PostOrOffer.Equals("Post"))
+                                    {@*Post*@
+                                                        <div class="slider">
+                                                            @foreach (var picture in postORoffer.PostPictures)
+                                                            {
+                                        <div class="slider__item">
+                                            @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                                              + Convert.ToBase64String(picture.Picture) + "\" />")
+                                        </div>}
+                                                        </div>
+                                                                            <div class="postoffer-low-container">
+                                                                                <div>
+                                                                                    <a href="@Url.Action("AddLikeToPost", "Profile", new { postId =postORoffer.Id, backTo = "ShowProfile", profileUserId = @ViewBag.UserId } )">
+                                                                                        <span>Like:</span>
+                                                                                    </a>
+                                                                                    @postORoffer.Likes
+                                                                                </div>
+                                                                            </div> }
+                                                                                            else
+                                                                                            { @*Offer*@
+                                                                                                                <div class="slider">
+                                                                                                                    @foreach (var picture in postORoffer.OfferPictures)
+                                                                                                                    {
+                                                                                                <div class="slider__item">
+                                                                                                    @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                                                                                                             + Convert.ToBase64String(picture.Picture) + "\" />")
+                                                                                                </div>}
+                                                                                                                </div>
+                                                                                                                                    <div class="postoffer-low-container">
+                                                                                                                                        <div>
+                                                                                                                                            <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =postORoffer.Id, backTo = "ShowProfile", profileUserId = @ViewBag.UserId} )">
+                                                                                                                                                <span>Like:</span>
+                                                                                                                                            </a>
+                                                                                                                                            @postORoffer.Likes
+                                                                                                                                        </div>
+                                                                                                                                    </div>                }
 
-        
-        }
-        </div>
+                                </div>}
+    </div>
+</div>
 
