--- a/GoogleAuthApp/Views/Profile/Offers.cshtml
+++ b/GoogleAuthApp/Views/Profile/Offers.cshtml
@@ -6,84 +6,10 @@
 }
 
 <head>
-    <link href="@Url.Content("~/Styles/Profile.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Styles/OwnProfile.css")" rel="stylesheet" type="text/css" />
     <link type="text/css" rel="stylesheet" href="~/Styles/sliderStyle.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
-
-<h2>Offers</h2>
-
-<div>
-    <a href="@Url.Action("CreateOffer", "Profile")" style="font-size:15px;margin:5px; flex:0 0 auto; padding:5px;">
-        <div style="height: 30px; width: 130px; background-color:ghostwhite; border:1px solid pink;">
-            Create Offer
-        </div>
-    </a>
-</div>
-
-@foreach (var offer in Model.Offers.OrderByDescending(p => p.Date))
-{
-    <hr>
-    <div>
-        <span>@offer.PostOrOffer</span>
-    </div>
-    <div style="position:relative;" class="searchedItem, top-container">
-
-        <div style="display:flex;flex-direction:row;">
-            <div>
-                <span>Details  </span>
-                <br />
-                <textarea readonly style="overflow:auto;resize:none">@offer.Text</textarea>
-            </div>
-            <br />
-            <br />
-            <div>
-                <span>Date  </span>
-                <br />
-                @offer.Date
-            </div>
-            <br />
-            <br />
-            <div>
-                <span>Categories:  </span>
-                <br />
-                <br />
-                @foreach (var category in offer.Categories)
-                {
-                    <p>
-                        @category.Group
-                    </p>
-                }
-            </div>
-        </div>
-    </div>
-    <div class="searchedItem, top-container">
-        <div class="slider">
-            @foreach (var picture in offer.OfferPictures)
-            {
-                <div class="slider__item">
-                    @Html.Raw("<img src=\"data:image/jpeg;base64,"
-                                           + Convert.ToBase64String(picture.Picture) + "\" />")
-                </div>
-            }
-        </div>
-    </div>
-
-    <div class="searchedItem, top-container">
-        <div>
-            <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =offer.Id , backTo = "Offers"} )" style="height: 50px; width: 50px;position:relative;">
-                <span>Like:</span>
-            </a>
-            @offer.Likes
-        </div>
-        <div>
-            <a href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )" style="height: 50px; width: 150px;position:relative;">
-                <span>"@offer.UserId" 's profile</span>
-            </a>
-        </div>
-    </div>
-
-}
-
 
 @section scripts {
     @*add slider Slick*@
@@ -91,3 +17,64 @@
     @*settings for slider*@
     <script src="~/Scripts/sliderSettings.js"></script>
 }
+
+<h2>Offers</h2>
+<div class="main-container">
+
+    <div>
+        <a class="button" href="@Url.Action("CreateOffer", "Profile")">
+            Create Offer
+        </a>
+    </div>
+    <div>
+        @foreach (var offer in Model.Offers.OrderByDescending(p => p.Date))
+        {
+            <hr>
+            <div class="postoffername">
+                <span>@offer.PostOrOffer</span>
+            </div>
+                <div class="middle-sub-container">
+                    <div class="postoffer-top-container">
+                        <div class="details-container">
+                            <p>Details:</p>
+                            <textarea readonly>@offer.Text</textarea>
+                        </div>
+                        <div class="date-container">
+                            <p>Date:</p>
+                            @offer.Date
+                        </div>
+                        <div class="postoffer-categories-container">
+                            <p>Categories:</p>
+                            @foreach (var category in offer.Categories)
+                            {
+                                <p>@category.Group</p>
+                            }
+                        </div>
+                    </div>
+
+                    <div class="slider">
+                        @foreach (var picture in offer.OfferPictures)
+                        {
+                            <div class="slider__item">
+                                @Html.Raw("<img src=\"data:image/jpeg;base64,"
+                                                       + Convert.ToBase64String(picture.Picture) + "\" />")
+                            </div>
+                        }
+                    </div>
+                    <div class="postoffer-low-container">
+                        <div>
+                            <a href="@Url.Action("AddLikeToOffer", "Profile", new { offerId =offer.Id , backTo = "Offers"} )">
+                                <span>Like:</span>
+                            </a>
+                            @offer.Likes
+                        </div>
+                        <div>
+                            <a href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )">
+                                <span>"@offer.UserId" 's profile</span>
+                            </a>
+                        </div>
+                    </div>
+            </div>
+        }
+    </div>
+</div>
