Name at offers in Offer

--- a/GoogleAuthApp/Views/Profile/Offers.cshtml
+++ b/GoogleAuthApp/Views/Profile/Offers.cshtml
@@ -70,7 +70,7 @@
                         </div>
                         <div>
                             <a href="@Url.Action("ShowProfile", "Profile", new { userId = offer.UserId} )">
-                                <span>"@offer.UserId" 's profile</span>
+                                <span>@offer.UserName's profile</span>
                             </a>
                         </div>
                     </div>
